--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "autobot-dawn",
   "version": "1.0.0",
-  "description": "Auto Bot Dawn By Jabrik",
+  "description": "Auto Bot Dawn By Jabrik - multi account runner with optional proxy",
   "main": "main.js",
   "scripts": {
     "start": "node main.js"
   },
+  "keywords": [
+    "autobot",
+    "dawn",
+    "multiaccount",
+    "proxy"
+  ],
+  "author": "Jabrik",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.7.4"
+    "axios": "^1.7.0"
   }
 }
